--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -7,40 +7,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/css/home-page-styles.css">
   <script src="/assets/scripts/card-hover-animation.js"></script>
-  <title>Multiverso Spider-Man</title>
+  <title>Spider-Man | Multiversos</title>
 </head>
 
 <body>
   <nav class="s-menu">
     <ul>
       <li class="s-menu__item">
-        <a href="#">Página Inicial</a>
+        <a href="/">Página Inicial</a>
       </li>
-      <li class="s-menu__item" id="spider-man-01">
+      <li class="s-menu__item">
         <a href="#">Tobey Maguire</a>
       </li>
-      <img class="s-menu__item s-menu__icon" src="/assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
+      <li class="s-menu__item s-menu__icon">
+        <img src="/assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
       </li>
-      <li class="s-menu__item" id="spider-man-02">
+      <li class="s-menu__item">
         <a href="#">Tom Holland</a>
       </li>
-      <li class="s-menu__item" id="spider-man-03">
+      <li class="s-menu__item">
         <a href="#">Andrew Garfield</a>
       </li>
     </ul>
   </nav>
   <div class="s-container">
-    <a href="#" class="s-card">
+    <a href="#" class="s-card" id="spider-man-01">
       <img class="s-card__background" src="/assets/images/pic-sm-bg-01.jpg">
       <img class="s-card__image" src="/assets/images/spider-man-01.png" alt="Tobey Maguire">
       <h2 class="s-card__title">Tobey Maguire</h2>
     </a>
-    <a href="#" class="s-card">
+    <a href="#" class="s-card" id="spider-man-02">
       <img class="s-card__background" src="/assets/images/pic-sm-bg-02.jpg">
       <img class="s-card__image" src="/assets/images/spider-man-02.png" alt="Tom Holland">
       <h2 class="s-card__title">Tom Holland</h2>
     </a>
-    <a href="#" class="s-card">
+    <a href="#" class="s-card" id="spider-man-03">
       <img class="s-card__background" src="/assets/images/pic-sm-bg-03.jpg">
       <img class="s-card__image" src="/assets/images/spider-man-03.png" alt="Andrew Garfield">
       <h2 class="s-card__title">Andrew Garfield</h2>
@@ -59,7 +60,6 @@
     </div>
     <div class="s-controller__line"></div>
   </div>
-
 </body>
 
 </html>
